--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,5 @@ install:
   - python setup.py install
 script:
   - flake8 RBFN
-  - pytest --cov=RBFN test/test.py  # Run the tests and check for test coverage.
+  - pytest --cov=RBFN test/test_travis.py  # Run the tests and check for test coverage with Travis optimized example
   - python -m RBFN --help  # Check if commandline will be opened.
