--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,6 @@ install:
   - pip3 install flake8
   - python setup.py install
 script:
-  - flake8 --max-line-length=115
+  - flake8 --ignore flag
   - pytest --cov=RBFN test/test_travis.py  # Run the tests and check for test coverage with Travis optimized example
   - python -m RBFN --help  # Check if commandline will be opened.
