--- a/.mergify.yml
+++ b/.mergify.yml
@@ -1,5 +1,5 @@
 pull_request_rules:
-  - name: automatic merge on CI success and review
+  - name: Automatic Merge on CI-Success and Review
     conditions:
       - status-success=continuous-integration/travis-ci/pr
       - "#approved-reviews-by>=2"
