--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,5 @@ install:
   - python setup.py install
 script:
   - pytest --cov=RBFN test/test_travis.py  # Run the tests and check for test coverage with Travis optimized example
+  - flake8 RBFN
   - python -m RBFN --help  # Check if commandline will be opened.
